Added Reflection hack to Fontus and moved unsafe stuff to Utils class